# python-project-lvl4

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
ansible/: deploy_to_DO.yml  vars.yml
ansible/templates/: default.conf.j2  docker-compose.yml.j2
app/: Dockerfile  Makefile  pyproject.toml
app/task_manager/: settings.py  urls.py
app/task_manager/locale/ru/LC_MESSAGES/: django.mo
app/task_manager/templates/: base_layout.html  footer.html
app/task_manager_app/: apps.py  urls.py  views.py
app/task_manager_app/locale/ru/LC_MESSAGES/: django.po
app/task_manager_app/templates/: base_layout.html  index.html  navbar.html
app/task_manager_app/templates/registration/: login.html
app/users/: urls.py  views.py
app/users/templates/users/: create.html
nginx/: default.conf
