[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
gunicorn = "^20.0.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
